# spark-delta-minio-sqlserver

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docs/: arquitetura.md
notebooks/: 01_setup_sqlserver.ipynb  02_extract_to_landing_zone.ipynb  03_convert_landing_to_bronze_delta.ipynb  04_dml_delta_bronze.ipynb
scripts/: common.py  convert_landing_to_bronze.py  create_buckets.py  dml_delta_bronze.py  extract_sqlserver_to_minio.py  setup_sqlserver.py
sql/: 01_create_database.sql  02_create_tables.sql  03_insert_sample_data.sql
