[project]
name = "trabalho2-arquitetura-dados"
version = "0.1.0"
description = "Pipeline local com Spark + SQL Server + MinIO + Delta Lake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyspark==3.5.2",
  "delta-spark==3.2.0",
  "boto3==1.35.36",
  "python-dotenv==1.0.1",
  "pyodbc==5.1.0",
  "jupyterlab==4.2.5",
  "pandas==2.2.3"
]

[tool.uv]
dev-dependencies = []
